--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <div id="root">
+
+        <header></header>
+        <footer></footer>
+        <main></main>
+ 
+    </div>
     
     <!-- development version, includes helpful console warnings --> 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
