blocchi colorati a sinistr

--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 
         <header></header>
         <footer></footer>
-        <main></main>
+        <main>
+            <aside id="sx">
+                <section id="user-bar">
+                </section>
+                <section id="notifications">
+                </section>
+                <section id="search-bar">
+                </section>
+                <section id="contacts">
+                </section>
+            </aside>
+            <aside id="dx"></aside>
+        </main>
  
     </div>
     
