barra laterale sinistra primi 2 tab

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,200&display=swap" rel="stylesheet"> 
+    <!-- Font Awsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- myStylCss -->
     <link rel="stylesheet" href="css/style.css">
+    <title>Boolenzap</title>
 </head>
 <body>
 
@@ -13,18 +20,45 @@
 
         <header></header>
         <footer></footer>
+
         <main>
+
             <aside id="sx">
-                <section id="user-bar">
+                <section class="user-bar">
+                    <div class="user">
+                        <img src="img/avatar_1.jpg" alt="">
+                        <div class="text">
+                            <h4>Nome Utente</h4>
+                        </div>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-circle-notch"></i>
+                        <i class="fas fa-comment-alt"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
                 </section>
                 <section id="notifications">
+                    <i class="fas fa-bell-slash"></i>
+                    <div class="text">
+                        <h4>Richiedi Notifiche di nuovi messaggi</h4>
+                        <a href="#">Attiva notifiche desktop</a>
+                    </div>
                 </section>
                 <section id="search-bar">
                 </section>
                 <section id="contacts">
                 </section>
             </aside>
-            <aside id="dx"></aside>
+
+            <aside id="dx">
+                <section class="user-bar">
+                </section>
+                <section class="main">
+                </section>
+                <section class="user-bar">
+                </section>
+            </aside>
+         
         </main>
  
     </div>
