colonna sinistra search bar

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                     </div>
                 </section>
                 <section id="search-bar">
+                    <button><i class="fas fa-search"></i></button>
+                    <input type="text" placeholder="Cerca o inizia una nuova chat">
                 </section>
                 <section id="contacts">
                 </section>
