--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                 </section>
+
                 <section id="notifications">
                     <i class="fas fa-bell-slash"></i>
                     <div class="text">
@@ -44,16 +45,42 @@
                         <a href="#">Attiva notifiche desktop</a>
                     </div>
                 </section>
+
                 <section id="search-bar">
                     <button><i class="fas fa-search"></i></button>
                     <input type="text" placeholder="Cerca o inizia una nuova chat">
                 </section>
+
                 <section id="contacts">
+                    <div class="contact">
+                        <img src="img/avatar_2.jpg" alt="">
+                        <h4>Michele</h4>
+                    </div>
+                    <div class="contact">
+                        <img src="img/avatar_3.jpg" alt="">
+                        <h4>Ector</h4>
+                    </div>
+                    <div class="contact">
+                        <img src="img/avatar_4.jpg" alt="">
+                        <h4>Mario</h4>
+                    </div>
                 </section>
             </aside>
 
             <aside id="dx">
                 <section class="user-bar">
+                    <div class="user">
+                        <img src="img/avatar_1.jpg" alt="">
+                        <div class="text">
+                            <h4>Michele</h4>
+                            <span id="last-acces" >Ultimo accesso oggi alle</span>
+                        </div>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-search"></i>
+                        <i class="fas fa-paperclip"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
                 </section>
                 <section class="main">
                 </section>
