resta solo il main

--- a/index.html
+++ b/index.html
@@ -84,7 +84,14 @@
                 </section>
                 <section class="main">
                 </section>
-                <section class="user-bar">
+                <section class="footer-bar">
+                    <div class="contI">
+                        <i class="far fa-smile"></i>
+                    </div>
+                    <input type="text" placeholder="Scrivi un messaggio">
+                    <div class="contI">
+                        <i class="fas fa-microphone"></i>
+                    </div>
                 </section>
             </aside>
          
