--- a/index.html
+++ b/index.html
@@ -82,8 +82,30 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                 </section>
+
                 <section class="main">
+                    <div class="row clearfix">
+                        <div class="sent">
+                            <div class="mexText">
+                                <span>Hai portato a spasso la bestia?</span>
+                            </div>
+                            <div class="mexDate">
+                                <span>12-12-12 alle 12:12</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row clearfix">
+                        <div class="recive">
+                            <div class="mexText">
+                                <span>No problem bro!</span>
+                            </div>
+                            <div class="mexDate">
+                                <span>12-12-12 alle 12:12</span>
+                            </div>
+                        </div>
+                    </div>
                 </section>
+
                 <section class="footer-bar">
                     <div class="contI">
                         <i class="far fa-smile"></i>
