mission css complete!

--- a/index.html
+++ b/index.html
@@ -86,20 +86,30 @@
                 <section class="main">
                     <div class="row clearfix">
                         <div class="sent">
-                            <div class="mexText">
-                                <span>Hai portato a spasso la bestia?</span>
+                            <div class="mex-Text">
+                                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa perferendis amet recusandae esse quia nesciunt aperiam cum ducimus qui suscipit quod provident, ad obcaecati eveniet nobis delectus voluptatem id natus.</span>
                             </div>
-                            <div class="mexDate">
+                            <div class="mex-Date">
                                 <span>12-12-12 alle 12:12</span>
                             </div>
                         </div>
                     </div>
                     <div class="row clearfix">
-                        <div class="recive">
-                            <div class="mexText">
+                        <div class="sent">
+                            <div class="mex-Text">
+                                <span>Hai portato a spasso la bestia?</span>
+                            </div>
+                            <div class="mex-Date">
+                                <span>12-12-12 alle 12:12</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row clearfix">
+                        <div class="recive clearfix">
+                            <div class="mex-Text">
                                 <span>No problem bro!</span>
                             </div>
-                            <div class="mexDate">
+                            <div class="mex-Date">
                                 <span>12-12-12 alle 12:12</span>
                             </div>
                         </div>
