--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,200&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
     <!-- Font Awsome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- myStylCss -->
@@ -53,7 +53,8 @@
 
                 <section id="contacts">
                     <div class="contact" v-for="contact in contacts">
-                        <img :src="'img/avatar' + contact.avatar + '.jpg'" alt="">
+                        <!-- <img :src="'img/avatar' + contact.avatar + '.jpg'" alt=""> -->
+                        <img :src="`img/avatar${contact.avatar}.jpg`" alt="">
                         <h4>{{contact.name}}</h4>
                     </div>                    
                 </section>
@@ -97,7 +98,7 @@
                         </div>
                     </div>
                     <div class="row clearfix">
-                        <div class="recive clearfix">
+                        <div class="received clearfix">
                             <div class="mex-Text">
                                 <span>No problem bro!</span>
                             </div>
