tentativo di stampare messagio parete1

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </section>
 
                 <section id="contacts">
-                    <div class="contact" v-for="contact in contacts">
+                    <div class="contact" v-for="(contact, index) in contacts" @click="selectMessage(index)">
                         <!-- <img :src="'img/avatar' + contact.avatar + '.jpg'" alt=""> -->
                         <img :src="`img/avatar${contact.avatar}.jpg`" alt="">
                         <h4>{{contact.name}}</h4>
@@ -80,24 +80,14 @@
                     <div class="row clearfix">
                         <div class="sent">
                             <div class="mex-Text">
-                                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa perferendis amet recusandae esse quia nesciunt aperiam cum ducimus qui suscipit quod provident, ad obcaecati eveniet nobis delectus voluptatem id natus.</span>
+                                <span>{{contacts[selectedContact].messages[selectedContact].message}}</span>
                             </div>
                             <div class="mex-Date">
                                 <span>12-12-12 alle 12:12</span>
                             </div>
                         </div>
                     </div>
-                    <div class="row clearfix">
-                        <div class="sent">
-                            <div class="mex-Text">
-                                <span>Hai portato a spasso la bestia?</span>
-                            </div>
-                            <div class="mex-Date">
-                                <span>12-12-12 alle 12:12</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row clearfix">
+                    <!-- <div class="row clearfix">
                         <div class="received clearfix">
                             <div class="mex-Text">
                                 <span>No problem bro!</span>
@@ -106,7 +96,7 @@
                                 <span>12-12-12 alle 12:12</span>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </section>
 
                 <section class="footer-bar">
