--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
                 </section>
 
                 <section class="main">
-                    <div class="row clearfix">
+                    <div class="row clearfix" v-for="message in contacts[selectedContact].messages[selectedContact].message">
                         <div class="sent">
                             <div class="mex-Text">
-                                <span>{{contacts[selectedContact].messages[selectedContact].message}}</span>
+                                <!-- <span>{{contacts[selectedContact].messages[selectedContact].message}}</span> -->
+                                <span>{{message}}</span>
                             </div>
                             <div class="mex-Date">
                                 <span>12-12-12 alle 12:12</span>
