anche le datteeee

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <span>{{mess.message}}</span>
                             </div>
                             <div class="mex-Date">
-                                <span>12-12-12 alle 12:12</span>
+                                <span>{{mess.date}}</span>
                             </div>
                         </div>
                     </div>
