funzione per pushare oggetto

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="contI">
                         <i class="far fa-smile"></i>
                     </div>
-                    <input type="text" placeholder="Scrivi un messaggio">
+                    <input type="text" placeholder="Scrivi un messaggio" v-model="newMessage" > 
                     <div class="contI">
                         <i class="fas fa-microphone"></i>
                     </div>
